--- a/src/modules/fw_pos_control_l1/autogyro_takeoff/CMakeLists.txt
+++ b/src/modules/fw_pos_control_l1/autogyro_takeoff/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2015-2017 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2021 ThunderFly s.r.o. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -31,21 +31,6 @@
 #
 ############################################################################
 
-add_subdirectory(launchdetection)
-add_subdirectory(runway_takeoff)
-add_subdirectory(autogyro_takeoff)
-
-px4_add_module(
-	MODULE modules__fw_pos_control_l1
-	MAIN fw_pos_control_l1
-	SRCS
-		FixedwingPositionControl.cpp
-		FixedwingPositionControl.hpp
-	DEPENDS
-		l1
-		launchdetection
-		landing_slope
-		runway_takeoff
-		autogyro_takeoff
-		tecs
-	)
+px4_add_library(autogyro_takeoff
+	AutogyroTakeoff.cpp
+)
