--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -44,6 +44,7 @@ set(msg_files
 	airspeed.msg
 	airspeed_validated.msg
 	airspeed_wind.msg
+  autogyro_takeoff_status.msg
 	battery_status.msg
 	camera_capture.msg
 	camera_trigger.msg
